--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
+      <li>Unix Command Line</li>
       <li>jQuery</li>
       <li>Node.js</li>
       <li>Express.js</li>
