--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <li>CSS</li>
       <li>JavaScript</li>
       <li>Unix Command Line</li>
+      <li>API</li>
       <li>jQuery</li>
       <li>Node.js</li>
       <li>Express.js</li>
