--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <article id="intro">
     <h2 class="major">Intro</h2>
     <span class="image main"><img src="images/pic01.jpg" alt=""></span>
-    <p>Hello, my name is <strong>Matthew Le</strong>. I am a <strong><em>Full-Stack Web Developer</em></strong> located in Utah, USA. I have a passion in developing websites and learning new technologies.</p>
+    <p>Hello, my name is <strong>Matthew Le</strong>. I am a <strong><em>Full-Stack Web Developer</em></strong> located in California, USA. I have a passion in developing websites and learning new technologies.</p>
   </article>
 
 <!-- Work -->
